# matrix-meta

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  pyproject.toml.bak
.github/workflows/: deploy.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose-web.yml  docker-compose.yml
scripts/: main.py
scripts/commands/: django.py  git.py  user.py
services/core/: apps.py  urls.py  views.py
services/core/scripts/: commands.py
shared/decorators/: __init__.py  app_config.py
shared/models/: base.py
shared/static/: README.md
shared/utils/: tools.py
